# CodeAnalysis

./: AstParser.cpp  AstParser.h  CMakeLists.txt  CodeAnalysis.h  ReportGenerator.cpp  ReportGenerator.h  RiskFunctionDb.cpp  RiskFunctionDb.h  SyntaxHighLighter.cpp  SyntaxHighLighter.h  encrypt.cpp  finderwindow.cpp  finderwindow.h  finderwindow.ui  log.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg.json
src/: CMakeLists.txt  CipherUtils.cpp  CipherUtils.h  Log.cpp  Log.h  MyAstParser.cpp  MyAstParser.h
